--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
 	"name": "@qoed/sortable-table",
-	"version": "0.0.1",
+	"version": "0.0.3",
+	"license": "MIT",
+	"author": {
+		"name": "Jonas Musekura Lundsholm",
+		"email": "jonas@qoed.dev"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/qoed/sortable-table"
+	},
 	"scripts": {
 		"dev": "svelte-kit dev -p 3002",
 		"build": "svelte-kit build",
