--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"release": "npx bumpp --commit --tag --push && npm run package && cd ./package && npm publish"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.21.0",
