--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 		"type": "git",
 		"url": "https://github.com/qoed/sortable-table"
 	},
+	"bugs": {
+		"url": "https://github.com/qoed/sortable-table/issues"
+	},
+	"homepage": "https://github.com/qoed/sortable-table#readme",
 	"scripts": {
 		"dev": "svelte-kit dev -p 3002",
 		"build": "svelte-kit build",
@@ -36,5 +40,12 @@
 		"tslib": "^2.4.0",
 		"typescript": "~4.6.4"
 	},
+	"keywords": [
+		"svelte-kit",
+		"SvelteKit",
+		"front-end",
+		"component",
+		"typescript"
+	],
 	"type": "module"
 }
